# Sokoban-SFML-Cpp

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  LICENSE.md  Makefile.am  README.md  Sokoban.cbp  Sokoban.layout.save  configure.ac
Debug/: Sokoban  makefile
Debug/src/: Sokoban.d  subdir.mk
Documentation/finalsprint/: diagrame.tex  sujet.tex
Documentation/sprint0/: dg_app.tex  groupeB01.tex
Executable/: Sokoban
SFML/cmake/: CompilerWarnings.cmake
SFML/examples/event_handling/: EventHandling.cpp
SFML/examples/island/: Island.cpp
SFML/examples/sound_capture/: SoundCapture.cpp
SFML/examples/sound_effects/: SoundEffects.cpp
SFML/examples/stencil/: Stencil.cpp
SFML/examples/text/: Text.cpp
SFML/examples/voip/: Client.cpp  Server.cpp
SFML/examples/vulkan/: Vulkan.cpp
SFML/test/: CMakeLists.txt
SFML/test/Audio/: SoundStream.test.cpp
SFML/test/Graphics/: Font.test.cpp  Image.test.cpp
Sokoban/: CMakeLists.txt  Makefile.am  Sokoban.cbp  common.mk  configure  configure.ac  configure~
Sokoban/include/core/: Actor.hpp  Board.hpp  Box.hpp  Movable.hpp  Platform.hpp  Player.hpp  Wall.hpp
Sokoban/include/gzc/games/sokoban/ui/: Menu.hpp  Resource_Holder.hpp
Sokoban/include/gzc/games/sokoban/ui/gui/sfml/: Application.hpp  Music_Player.hpp  Scene_Node.hpp  Sound_Player.hpp  Utility.hpp  World.hpp
Sokoban/include/gzc/games/sokoban/ui/gui/sfml/components/: Button.hpp  Container.hpp  Label.hpp
Sokoban/include/gzc/games/sokoban/ui/gui/sfml/entities/: Entity.hpp  Entity_Box.hpp  Entity_Platform.hpp  Entity_Player.hpp  Entity_Wall.hpp
Sokoban/include/gzc/games/sokoban/ui/gui/sfml/states/: State.hpp  State_Game.hpp  State_Identifiers.hpp  State_Menu.hpp  State_Pause.hpp  State_Settings.hpp  State_Stack.hpp
Sokoban/src/: main.cpp  main.hpp
Sokoban/src/model/: Actor.cpp  Actor.hpp  Board.cpp  Board.hpp  Box.cpp  Box.hpp  Makefile.am  Movable.cpp  Movable.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
Sokoban/src/ui/: Category.hpp  Makefile.am  Menu.cpp
Sokoban/src/ui/gui/: Animation.cpp  Application.cpp  Application.hpp  Makefile.am  Music_Player.cpp  Music_Player.hpp  Scene_Node.cpp  Sound_Node.cpp  Sound_Player.cpp  Sound_Player.hpp  Sprite_Node.cpp  Utility.cpp  Utility.hpp  World.cpp  World.hpp
Sokoban/src/ui/gui/components/: Button.cpp  Component.cpp  Container.cpp  Label.cpp  Makefile.am
Sokoban/src/ui/gui/entities/: Entity.cpp  Entity.hpp  Entity_Box.cpp  Entity_Box.hpp  Entity_Movable.cpp  Entity_Movable.hpp  Entity_Platform.cpp  Entity_Platform.hpp  Entity_Player.cpp  Entity_Player.hpp  Entity_Wall.cpp  Entity_Wall.hpp  Makefile.am
Sokoban/src/ui/gui/states/: Makefile.am  State.cpp  State.hpp  State_Game.cpp  State_Menu.cpp  State_Pause.cpp  State_Pause.hpp  State_Settings.cpp  State_Settings.hpp  State_Stack.cpp  State_Stack.hpp  State_Title.cpp
Sokoban/src/util/: Logger.hpp  Makefile.am
doc/: KNOWLEDGE.md  README.md  backlog.tex  dg_app.tex  dg_existant.tex  dia_classe.tex  groupeB01.ist  groupeB01.tex  plan.tex  spec_tech.tex
doc/finalsprint/: backlog.tex  biblio.tex  classeUML.tex  conclusion.tex  contribution.tex  diagrame.tex  groupeB01.ist  groupeB01.tex  implementation.tex  intro.tex  source.bib  src.tex  sujet.tex
doc/sprint0/: groupeB01.ist
include/gui/: Application.hpp  Music_Player.hpp  Resource_Bundle.hpp  Resource_Identifiers.hpp  Scene_Node.hpp  Sound_Node.hpp  Sound_Player.hpp  Sprite_Node.hpp  Utility.hpp  World.hpp
include/input/: Gamepad.hpp  Keyboard.hpp  Mouse.hpp
include/net/: Client.hpp  Packet.hpp  Server.hpp
include/ui/: Category.hpp  Menu.hpp  Resource_Holder.hpp  Resource_Holder.inl  Utility.inl
src/: Makefile.am  main.cpp  main.hpp
src/core/: actor.cpp  actor.hpp  board.cpp  board.hpp  box.cpp  box.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  wall.cpp  wall.hpp
src/gui/: Animation.cpp  Application.cpp  Music_Player.cpp  Resource_Bundle.cpp  Scene_Node.cpp  Sound_Node.cpp  Sound_Player.cpp  Sprite_Node.cpp  Utility.cpp  World.cpp
src/input/: Gamepad.cpp  Keyboard.cpp  Mouse.cpp
src/model/: Actor.cpp  Actor.hpp  Board.cpp  Board.hpp  Box.cpp  Box.hpp  Movable.cpp  Movable.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
src/net/: Client.cpp  Packet.cpp  Server.cpp
src/res/: keys.cfg
src/ui/: Category.hpp  Makefile.am  Menu.cpp  Menu.hpp  Resource_Holder.hpp  Resource_Holder.inl  Utility.inl  menu.cpp  menu.hpp
src/ui/gui/: Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  Base_State.cpp  Base_State.hpp  Button.cpp  Button.hpp  Command.cpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  Command_Queue.cpp  Command_Queue.hpp  Container.cpp  Event_Manager.cpp  Event_Manager.hpp  Game_Scene_Node.cpp  Game_Scene_Node.hpp  Game_State.cpp  Game_State.hpp  Label.cpp  Label.hpp  Main_Window.cpp  Main_Window.hpp  Makefile.am  Music_Player.cpp  Music_Player.hpp  Parallel_Task.cpp  Parallel_Task.hpp  ResourceBundle.cpp  ResourceHolder.inl  Resource_Bundle.cpp  Resource_Identifiers.hpp  Scene_Node.cpp  Scene_Node.hpp  Sound_Node.cpp  Sound_Node.hpp  Sound_Player.cpp  Sound_Player.hpp  (+40 more)
src/ui/gui/actor/: User.cpp  User.hpp  entity.cpp  entity.hpp  world.cpp  world.hpp
src/ui/gui/components/: Button.cpp  Button.hpp  Component.cpp  Component.hpp  Container.cpp  Container.hpp  Label.cpp  Label.hpp  Makefile.am
src/ui/gui/entities/: Entity.cpp  Entity.hpp  Entity_Box.cpp  Entity_Box.hpp  Entity_Movable.cpp  Entity_Movable.hpp  Entity_Platform.cpp  Entity_Platform.hpp  Entity_Player.cpp  Entity_Player.hpp  Entity_Wall.cpp  Entity_Wall.hpp
src/ui/gui/states/: Makefile.am  State.cpp  State.hpp  State_Game.cpp  State_Game.hpp  State_Game_Over.cpp  State_Game_Over.hpp  State_Identifiers.hpp  State_Intro.cpp  State_Intro.hpp  State_Loading.hpp  State_Menu.cpp  State_Menu.hpp  State_Pause.cpp  State_Pause.hpp  State_Settings.cpp  State_Settings.hpp  State_Stack.cpp  State_Stack.hpp  State_Title.cpp  State_Title.hpp
src/util/: Logger.cpp  Logger.hpp  Makefile.am  logger.cpp  logger.hpp
(+430 files in other folders)
