noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES =
libmodel_a_SOURCES += Actor.cpp Actor.hpp
libmodel_a_SOURCES += Movable.cpp Movable.hpp
libmodel_a_SOURCES += Box.cpp Box.hpp
libmodel_a_SOURCES += Player.cpp Player.hpp
libmodel_a_SOURCES += Platform.cpp Platform.hpp
libmodel_a_SOURCES += Wall.cpp Wall.hpp
libmodel_a_SOURCES += Board.cpp Board.hpp
