noinst_LIBRARIES = libentities.a

libentities_a_SOURCES = Entity.cpp Entity.hpp
libentities_a_SOURCES += Entity_Movable.cpp Entity_Movable.hpp
libentities_a_SOURCES += Entity_Box.cpp Entity_Box.hpp
libentities_a_SOURCES += Entity_Player.cpp Entity_Player.hpp
libentities_a_SOURCES += Entity_Platform.cpp Entity_Platform.hpp
libentities_a_SOURCES += Entity_Wall.cpp Entity_Wall.hpp
